# face-encoding-service

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
src/: db.py  main.py  models.py  router.py
src/controllers/: SystemController.py  auth_controller.py  image_controller.py  session_controller.py  system_controller.py
src/exceptions/: __init__.py
src/models/: __init__.py  face_encodings.py  image.py  session.py
src/repositories/: auth_repository.py  face_encoding_repository.py  image_repository.py  session_repository.py
src/schemas/: image.py  session.py
src/services/: auth_service.py  image_service.py  session_service.py
tests/controllers/: test_SystemController.py
tests/e2e_tests/: test_session_journey.py  test_start_new_session.py
tests/integration_tests/: conftest.py
tests/integration_tests/repositories/: test_image_repository.py  test_it_auth_repository.py  test_it_face_encoding_repository.py  test_it_session_repository.py
tests/integration_tests/services/: test_it_image_service.py
tests/unit_tests/controllers/: test_auth_controller.py  test_image_controller.py  test_session_controller.py  test_system_controller.py
tests/unit_tests/services/: test_auth_service.py  test_image_service.py  test_session_service.py
